<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home"
        android:src="@drawable/logo_home"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:id="@+id/home_button"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">
        <TextView
            android:id="@+id/settings_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/brand_blue"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/agbalumo_regular"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            android:backgroundTint="#C09DAB">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@color/brand_red"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/akayakanadaka_regular"/>

                <TextView
                    android:id="@+id/user_id_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:layout_marginTop="25dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_variable_font_wdth_wght_one"/>
                <TextView
                    android:id="@+id/email_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_variable_font_wdth_wght_one"/>
                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_bg"
                    android:backgroundTint="@color/brand_red"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:text="@string/logout"
                    android:fontFamily="@font/roboto_variable_font_wdth_wght_one"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/logo_app"
        android:layout_margin="10dp"
        android:alpha="0.3"/>

</RelativeLayout>