<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#0C0652"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/agbalumo_regular"/>

        <EditText
            android:fontFamily="@font/roboto_variable_font_wdth_wght_one"
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_border"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#988B8B"
            android:layout_marginBottom="30dp"
            android:textSize="14sp"/>
        <EditText
            android:fontFamily="@font/roboto_variable_font_wdth_wght_one"
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_border"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#988B8B"
            android:layout_marginBottom="30dp"
            android:textSize="14sp"/>

        <CheckBox
            android:textStyle="bold"
            android:id="@+id/remember_me_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:buttonTint="#0C0652"
            android:fontFamily="@font/roboto_variable_font_wdth_wght_one"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_bg"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_variable_font_wdth_wght_one"/>

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_variable_font_wdth_wght_one"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/logo_app"
        android:layout_margin="10dp"
        android:alpha="0.3"/>

</RelativeLayout>